--- a/right.html
+++ b/right.html
@@ -10,6 +10,8 @@
 <p>The MCA Department started functioning in the year 2005 with a sanctioned strength of sixty students The department remains committed towards its goal of producing not only industry ready professionals, but also to provide the right ambience and infrastructure for those interested in pursuing their interest in computers and related fields. Master of Computer Applications programme is a two year course of intensive theory and practical work. It is spread over a period of six semesters which enables the candidates to get familiar with the usage of computer using at least five latest programming languages and a large number of applications,
 Expert faculty drawn from industry and academia are the catalysts to the learning on campus and facilitate valuable exposure to the learning on campus and provide an integrated multidisciplinary program with innovative teaching methods to enhance analytic and problem solving skills, personality development module to tap the full potential of the students by improving time and self management communication skills, team spirit, confidence and career building aptitude.
 The department has an outstanding educational infrastructure The classrooms are equipped with LCD projectors. The department has advanced labs with high-end machines running.</p>
+<a href="register.html" target="_blank">Register now</a>
 </html>
+
 
 
